--- a/DevilDaggersWebsite/wwwroot/styles/leaderboard.css
+++ b/DevilDaggersWebsite/wwwroot/styles/leaderboard.css
@@ -97,5 +97,5 @@
 		}
 
 .leaderboard-body > :nth-child(2n+1) {
-	background-color: #111;
+	background-color: var(--col-nav-background);
 }
